--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
     "node-cron": "^2.0.3",
