--- a/client/package.json
+++ b/client/package.json
@@ -57,5 +57,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://dynobd-ecommerce.herokuapp.com/"
+  "proxy": "https://dynobd-ecommerce.herokuapp.com"
 }
