--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=4000
 NODE_ENV=production
 DB_NAME=DynoBD
-DB_PASSWORD=dynobd1321
+DB_PASSWORD=
 JWT_ACCOUNT_ACTIVATION=mymagic5112142Activation
 JWT_SECRET=545243543we232ew2
 JWT_RESET_PASSWORD=mymagic5112142ResetPassword
